[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-oar"
version = "0.0.1"
description = "PyTest plugin for the OAR testing framework"
license = "MIT"
authors = [
  { name="Ryan de Marigny", email="ryandemarigny@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pydantic>=1.0.0',
    'pytest>=6.0.1',
    'tomli>=2.0.0'
]

[project.urls]
"Homepage" = "https://github.com/ryandem1/oar"
"Bug Tracker" = "https://github.com/ryandem1/oar/issues"
